tests/baselines/reference/functionCall8.errors.txt
==== tests/cases/compiler/functionCall8.ts (4 errors) ====
    function foo(a?:string){}
    foo('foo'); 
    foo('foo', 'bar'); 
    ~~~
!!! functionCall8.ts(3,1): error TS2081: Supplied parameters do not match any signature of call target.
    ~~~
!!! functionCall8.ts(3,1): error TS2087: Could not select overload for 'call' expression.
    foo(4);
    ~~~
!!! functionCall8.ts(4,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'number'.
    ~~~
!!! functionCall8.ts(4,1): error TS2087: Could not select overload for 'call' expression.
    foo();
    